<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/food_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingStart="@dimen/_40sdp">

            <View
                android:id="@+id/food_name"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/food_name_here"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:background="#fff0f0"/>

            <View
                android:id="@+id/food_ingrident"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/food_ingrident_here"
                android:textSize="@dimen/_12ssp"
                android:background="#fff0f0"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                >
                <View
                    android:id="@+id/food_price"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:text="@string/food_price_here"
                    android:textSize="@dimen/_12ssp"
                    android:background="#ff00f0"/>

                <View
                    android:id="@+id/food_time"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:text="@string/food_time_here"
                    android:textSize="@dimen/_10ssp"
                    android:background="#fff0f0"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/food_image"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:layout_gravity="start|center"
            android:background="#fff0f0"/>

    </FrameLayout>


</LinearLayout>